--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
+        "watch": "vite build && vite build --watch",
         "dev": "vite"
     },
     "devDependencies": {
@@ -10,7 +11,12 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "normalize.css": "^8.0.1",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.2.3",
+        "vue": "^3.5.13"
     }
 }
