--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_DATABASE=code_challenge
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -37,7 +37,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=array
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
