Controller, Views, CRUD & Routes work - Company Controller, Views, CRUD & Routes = Job Controller, Views, CRUD & Routes

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_DATABASE=code_challenge
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=array
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
